add: add headless test script to Playwright configuration

--- a/e2e/package.json
+++ b/e2e/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test:headed": "playwright test --headed"
+    "test:headed": "playwright test --headed",
+    "test:headless": "playwright test"
   },
   "keywords": [],
   "author": "",
