--- a/.github/workflows/fim-web-e2e.yaml
+++ b/.github/workflows/fim-web-e2e.yaml
@@ -19,7 +19,7 @@ jobs:
           node-version: lts/*
 
       - name: Move to FIM-Web directory
-        run: cd  /home/runner/web/fim-web
+        run: cd  /home/runner && ls -al
 
       - name: Install dependencies
         run: npm ci
