fix: update npm installation command in FIM-Web E2E workflow

--- a/.github/workflows/fim-web-e2e.yaml
+++ b/.github/workflows/fim-web-e2e.yaml
@@ -22,7 +22,7 @@ jobs:
         run: |
           pwd
           cd /home/runner/work/FIM/FIM/web/fim-web
-          ls -al
+          npm install -g pnpm
           npm ci
 
       - name: Run FIM-Web in dev mode
