fix: update pnpm command to use --frozen-lockfile in FIM-Web E2E workflow

--- a/.github/workflows/fim-web-e2e.yaml
+++ b/.github/workflows/fim-web-e2e.yaml
@@ -23,7 +23,7 @@ jobs:
           pwd
           cd /home/runner/work/FIM/FIM/web/fim-web
           npm install -g pnpm
-          pnpm ci
+          pnpm install --frozen-lockfile
 
       - name: Run FIM-Web in dev mode
         run: |
