fix: run pnpm dev in the background in FIM-Web E2E workflow

--- a/.github/workflows/fim-web-e2e.yaml
+++ b/.github/workflows/fim-web-e2e.yaml
@@ -28,7 +28,7 @@ jobs:
       - name: Run FIM-Web in dev mode
         run: |
           cd /home/runner/work/FIM/FIM/web/fim-web
-          pnpm dev
+          pnpm dev &
 
       - name: Install Playwright Browsers
         run: |
