fix: add pnpm install step before running Playwright tests in FIM-Web E2E workflow

--- a/.github/workflows/fim-web-e2e.yaml
+++ b/.github/workflows/fim-web-e2e.yaml
@@ -38,6 +38,7 @@ jobs:
       - name: Run Playwright tests
         run: |
           cd /home/runner/work/FIM/FIM/e2e
+          pnpm install
           npx playwright test
 
 
