fix: update test command to use pnpm test:ci in FIM-Web E2E workflow

--- a/.github/workflows/fim-web-e2e.yaml
+++ b/.github/workflows/fim-web-e2e.yaml
@@ -39,7 +39,7 @@ jobs:
         run: |
           cd /home/runner/work/FIM/FIM/e2e
           pnpm install
-          npx playwright test
+          pnpm test:ci
 
       - uses: actions/upload-artifact@v4
         if: always()
