--- a/e2e/package.json
+++ b/e2e/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test:headed": "playwright test --headed",
-    "test:headless": "playwright test"
+    "test:headless": "playwright test",
+    "test:ci": "npx playwright test --grep-invert @wip"
   },
   "keywords": [],
   "author": "",
