fix: update E2E workflow to run Playwright tests with grep-invert option

--- a/.github/workflows/fim-web-e2e.yaml
+++ b/.github/workflows/fim-web-e2e.yaml
@@ -39,7 +39,7 @@ jobs:
         run: |
           cd /home/runner/work/FIM/FIM/e2e
           pnpm install
-          pnpm test:ci
+          npx playwright test --grep-invert @wip
 
       - uses: actions/upload-artifact@v4
         if: always()
