--- a/federation_orchestrator/Dockerfile
+++ b/federation_orchestrator/Dockerfile
@@ -1,13 +1,13 @@
-FROM golang:1.23.3 AS builder
+FROM golang:1.23.5 AS builder
 
-ADD . /app
-WORKDIR /app
+ADD ./federation_orchestrator /app/src
+WORKDIR /app/src
 
 RUN go build -o federation_orchestrator main.go
 
 FROM scratch
 
-COPY --from=builder /app/federation_orchestrator /app/federation_orchestrator
+COPY --from=builder /app/src /app
 RUN chmod +x /app/federation_orchestrator
 
 ENTRYPOINT ["./federation_orchestrator"]
