--- a/.github/workflows/fim-web-e2e.yaml
+++ b/.github/workflows/fim-web-e2e.yaml
@@ -30,15 +30,16 @@ jobs:
           cd /home/runner/work/FIM/FIM/web/fim-web
           pnpm dev &
 
-      - name: Install Playwright Browsers
+      - name: Install Playwright and browsers
         run: |
           cd /home/runner/work/FIM/FIM/e2e
-          npx playwright install --with-deps
+          pnpm install
+          npx playwright install chromium --with-deps
+          npx playwright install-deps
 
       - name: Run Playwright tests
         run: |
           cd /home/runner/work/FIM/FIM/e2e
-          pnpm install
           npx playwright test --grep-invert @wip
 
       - uses: actions/upload-artifact@v4
