fix(docker): update Dockerfiles to use alpine base image and correct file paths refactor(go.mod): adjust buf_schema path for consistency feat(feed): add generated feed service client and handler implementation

--- a/federation_orchestrator/Dockerfile
+++ b/federation_orchestrator/Dockerfile
@@ -1,13 +1,14 @@
 FROM golang:1.23.5 AS builder
 
-ADD ./federation_orchestrator /app/src
+ADD ./federation_orchestrator/federation_orchestrator /app/src
+ADD ./buf_schema /app/buf_schema
 WORKDIR /app/src
 
 RUN go build -o federation_orchestrator main.go
 
-FROM scratch
+FROM alpine:latest
 
-COPY --from=builder /app/src /app
+COPY --from=builder /app/src/federation_orchestrator /app/federation_orchestrator
 RUN chmod +x /app/federation_orchestrator
 
-ENTRYPOINT ["./federation_orchestrator"]
+ENTRYPOINT ["/app/federation_orchestrator"]
